visually implemented navbar

--- a/main.html
+++ b/main.html
@@ -7,6 +7,41 @@
     <title>Document</title>
 </head>
 <body>
+    <section class="navbar">
+        <a href="#" class="nav-item">
+            <div class="nav-item-container">Home</div>
+        </a>
+        <a href="#projects" class="nav-item">
+            <div class="nav-item-container">Projects</div>
+        </a>
+        <a href="#hobbies" class="nav-item">
+            <div class="nav-item-container">Hobbies</div>
+        </a>
+        <a href="#contact" class="nav-item">
+            <div class="nav-item-container">Contact</div>
+        </a>
+    </section>
+    <section class="header">
+        <h1 class="heading">Tom Roth</h1>
+        <p><em>A portfolio website</em></p>
+    </section>
     
+    
+    <section id="projects">
+
+    </section>
+
+
+    <section id="cv">
+
+    </section>
+
+    <section id="hobbies">
+
+    </section>
+
+    <section id="contact">
+
+    </section>
 </body>
 </html>
