made background with repeating linear gradient

--- a/main.html
+++ b/main.html
@@ -49,6 +49,12 @@
                 <li class="hobby">Coding</li>
                 <li class="hobby">Playing the flugelhorn</li>
                 <li class="hobby"></li>
+                <li class="hobby"></li>
+                <li class="hobby"></li>
+                <li class="hobby"></li>
+                <li class="hobby"></li>
+                <li class="hobby"></li>
+                <li class="hobby"></li>
             </ul>
         </section>
 
