added js scroll with offset

--- a/main.html
+++ b/main.html
@@ -115,15 +115,15 @@
                 <tbody>
                     <tr>
                         <td>September 2017 - Today</td>
-                        <td><a href="http://">Gymnasium Bad Waldsee</a>, will be completed in 2026</td>
+                        <td><a href="https://gymibw.de/">Gymnasium Bad Waldsee</a>, will be completed in 2026</td>
                     </tr>
                     <tr>
-                        <td>Fall 2023 - December 2023</td>
-                        <td><a href="http://">CS50x</a> - Harvards Introduction to Computer Science (with <a href="http://">certificate</a>)</td>
+                        <td>September 2023 - December 2023</td>
+                        <td><a href="https://cs50.harvard.edu/x/2022/">CS50x</a> - Harvards Introduction to Computer Science (with <a href="http://cs50.harvard.edu/certificates/977b9b28-bc42-4025-856b-02fe19d09781">certificate</a>)</td>
                     </tr>
                     <tr>
                         <td>January 2024 - June 2024</td>
-                        <td><a href="http://">CS50AI</a> - Harvards Introduction to Artificial Intelligence (with <a href="http://">certificate</a>)</td>
+                        <td><a href="https://cs50.harvard.edu/ai/2023/">CS50AI</a> - Harvards Introduction to Artificial Intelligence (with <a href="http://cs50.harvard.edu/certificates/663ce19c-7f75-4dde-bf20-503febc8a31d">certificate</a>)</td>
                     </tr>
                     <tr>
                         <td>September 2013 - September 2017</td>
