added images of projects

--- a/projects.html
+++ b/projects.html
@@ -44,9 +44,20 @@
             <ul class="project-list">
                 <li class="project-list-item">
                     <a href="https://github.com/rothtom/sorting/">Sorting Algorithm Visualisation</a>
+                    <img src="images/sorting_project.png" alt="">
+                    <p>
+                        This is some code to sort unordered lists of integers with various sorting algorythms such as selection-sort,
+                        bubble-sort, merge-sort and quick-sort and keeping track of the time they take to sort.
+                    </p>
                 </li>
                 <li class="project-list-item">
                     <a href="https://github.com/rothtom/maze">Maze solving algorithm Visualisation</a>
+                    <img src="images/maze_project.png" alt="" srcset="">
+                    <p>
+                        This project consists of three main files. One for creating a maze, one for solving it nad keeping track of the path and all visited cells
+                        and one for visualising the results. The path is blue - and its the optimal path because the algorithm used in this example is A-star
+                        - all other visited cells are colored yellow. 
+                    </p>
                 </li>
                 <li class="project-list-item">
                     <a href="https://github.com/rothtom/portfolio-website">This portfolio website</a>
