edited css a bit

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
             <div class="contact-links-div">
                 <a href="https://github.com/rothtom/"><img id="github-logo" src="images/github-mark.png" alt=""></a>
                 <img src="images/email.png" alt="" onclick="copyEmail()">
+                <p>(click the images above)</p>
             </div>
         
             <hr>
